--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-        <link rel="shortcut icon" href="Icons/login.png" type="image/x-icon">
+        <link rel="shortcut icon" href="Icons/login.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -14,6 +14,7 @@
         <form id="login-form">
             <input type="text" id="username" name="username" placeholder="Nome de Usuário" required>
             <input type="password" id="password" name="password" placeholder="Senha" required>
+            <a type="remember" href="">Esqueceu sua senha?</a>
             <input type="submit" value="LOGIN">
         </form>
     </div>
